gccida/c2/ix86_va_arg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3042:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3051:4: error: expected ';' after expression
rtx v17; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3051:5: error: use of undeclared identifier 'v17'
rtx v17; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3075:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3077:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3085:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3086:4: error: expected ';' after expression
rtx v52; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3086:5: error: use of undeclared identifier 'v52'
rtx v52; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3097:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3099:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v65; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3102:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v68; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3104:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v70; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3109:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v75; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3117:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v83; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3120:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v86; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3124:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v90; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3138:4: error: expected ';' after expression
rtx memref; // [rsp+30h] [rbp-98h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3138:5: error: use of undeclared identifier 'memref'
rtx memref; // [rsp+30h] [rbp-98h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/i386.c:3145:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v112; // [rsp+60h] [rbp-68h] 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_va_arg/src/obj/i386.o] Error 1
